refactor: update allowed headers for cors in security config